# poly

./: CMakeLists.txt  LICENSE  README.md  estrin1.dot  fact1.dot  out_P7_gcc_vmx_fma_ffast_math.txt  out_P8_gcc_vmx_ffast_math_tree-vectorize_vect-cost-model  out_SB_gcc_mavx_ffast_math.txt  out_exp_bw  out_exp_sb  out_gcc_mavx_fma_ffast_math.txt  out_gcc_vmx_ffast_math.txt  pp.pl  res.html  res.txt  result.txt  run.sh  toto
CMake/: Compiler.cmake  SelectTech.cmake
bench/: CMakeLists.txt  benchmark_bd10.cpp  benchmark_bd2bd2bd2bd2bd2.cpp  benchmark_bd2bd2bd2bd2ed2.cpp  benchmark_bd2bd2bd2bd2hkth1d2.cpp  benchmark_bd2bd2bd2ed2ed2.cpp  benchmark_bd2bd2bd2ed2hkth1d2.cpp  benchmark_bd2bd2bd2hkth1d2hkth1d2.cpp  benchmark_bd2bd2ed2ed2ed2.cpp  benchmark_bd2bd2ed2ed2hkth1d2.cpp  benchmark_bd2bd2ed2hkth1d2hkth1d2.cpp  benchmark_bd2bd2hkth1d2hkth1d2hkth1d2.cpp  benchmark_bd2bd4bd4.cpp  benchmark_bd2bd4ed4.cpp  benchmark_bd2bd4hkth1d4.cpp  benchmark_bd2bd4hkth2d4.cpp  benchmark_bd2bd4hkth3d4.cpp  benchmark_bd2ed2ed2ed2ed2.cpp  benchmark_bd2ed2ed2ed2hkth1d2.cpp  benchmark_bd2ed2ed2hkth1d2hkth1d2.cpp  benchmark_bd2ed2hkth1d2hkth1d2hkth1d2.cpp  benchmark_bd2ed4ed4.cpp  benchmark_bd2ed4hkth1d4.cpp  benchmark_bd2ed4hkth2d4.cpp  benchmark_bd2ed4hkth3d4.cpp  benchmark_bd2hkth1d2hkth1d2hkth1d2hkth1d2.cpp  benchmark_bd2hkth1d4hkth1d4.cpp  benchmark_bd2hkth1d4hkth2d4.cpp  benchmark_bd2hkth1d4hkth3d4.cpp  benchmark_bd2hkth2d4hkth2d4.cpp  benchmark_bd2hkth2d4hkth3d4.cpp  benchmark_bd2hkth3d4hkth3d4.cpp  benchmark_bd4bd2bd2bd2.cpp  benchmark_bd4bd2bd2ed2.cpp  benchmark_bd4bd2bd2hkth1d2.cpp  benchmark_bd4bd2ed2ed2.cpp  benchmark_bd4bd2ed2hkth1d2.cpp  benchmark_bd4bd2hkth1d2hkth1d2.cpp  benchmark_bd4ed2ed2ed2.cpp  benchmark_bd4ed2ed2hkth1d2.cpp  (+193 more)
bench/latency/: .CMakeLists.txt.swp  CMakeLists.txt  cxx_demangle.cc  main.cpp  primitive_ops.cc  primitive_ops.h  primitive_ops_power8.h  primitive_ops_x86_64.h  run_kernels.cc
bench/lib/: CMakeLists.txt  README
bench/throughput/: .CMakeLists.txt.swp  CMakeLists.txt  main_imf.cpp  main_scalar.cpp  main_svml4d.cpp  main_vector.cpp  main_vendor.cpp
bench/throughput/exp/: CMakeLists.txt  main_scalar.cpp  main_vector.cpp
bench/throughput/poly/: CMakeLists.txt  main_scalar.cpp  main_vector.cpp
bench/throughput/tool/: CMakeLists.txt  main_scalar_boundary.cpp  main_scalar_twok.cpp  main_vector_boundary.cpp  main_vector_twok.cpp
bench/ulp/: CMakeLists.txt  main.cpp  main_imf.cpp  main_scalar.cpp  main_svml4d.cpp  main_vector.cpp  main_vectorial.cpp
bench/ulp/exp/: CMakeLists.txt  main_scalar.cpp  main_vector.cpp
bench/ulp/poly/: CMakeLists.txt  main_scalar.cpp  main_vector.cpp
cyme/lib/: libcyme.1.4.0.dylib  libcyme.1.dylib  libcyme.dylib
dot/: force1.dot  horner1.dot
libv/: CMakeLists.txt
libv/src/: cyme_bd10.cpp  cyme_bd2bd2bd2bd2bd2.cpp  cyme_bd2bd2bd2bd2ed2.cpp  cyme_bd2bd2bd2bd2hkth1d2.cpp  cyme_bd2bd2bd2ed2ed2.cpp  cyme_bd2bd2bd2ed2hkth1d2.cpp  cyme_bd2bd2bd2hkth1d2hkth1d2.cpp  cyme_bd2bd2ed2ed2ed2.cpp  cyme_bd2bd2ed2ed2hkth1d2.cpp  cyme_bd2bd2ed2hkth1d2hkth1d2.cpp  cyme_bd2bd2hkth1d2hkth1d2hkth1d2.cpp  cyme_bd2bd4bd4.cpp  cyme_bd2bd4ed4.cpp  cyme_bd2bd4hkth1d4.cpp  cyme_bd2bd4hkth2d4.cpp  cyme_bd2bd4hkth3d4.cpp  cyme_bd2ed2ed2ed2ed2.cpp  cyme_bd2ed2ed2ed2hkth1d2.cpp  cyme_bd2ed2ed2hkth1d2hkth1d2.cpp  cyme_bd2ed2hkth1d2hkth1d2hkth1d2.cpp  cyme_bd2ed4ed4.cpp  cyme_bd2ed4hkth1d4.cpp  cyme_bd2ed4hkth2d4.cpp  cyme_bd2ed4hkth3d4.cpp  cyme_bd2hkth1d2hkth1d2hkth1d2hkth1d2.cpp  cyme_bd2hkth1d4hkth1d4.cpp  cyme_bd2hkth1d4hkth2d4.cpp  cyme_bd2hkth1d4hkth3d4.cpp  cyme_bd2hkth2d4hkth2d4.cpp  cyme_bd2hkth2d4hkth3d4.cpp  cyme_bd2hkth3d4hkth3d4.cpp  cyme_bd4bd2bd2bd2.cpp  cyme_bd4bd2bd2ed2.cpp  cyme_bd4bd2bd2hkth1d2.cpp  cyme_bd4bd2ed2ed2.cpp  cyme_bd4bd2ed2hkth1d2.cpp  cyme_bd4bd2hkth1d2hkth1d2.cpp  cyme_bd4ed2ed2ed2.cpp  cyme_bd4ed2ed2hkth1d2.cpp  cyme_bd4ed2hkth1d2hkth1d2.cpp  (+191 more)
llc/: CMakeLists.txt  ll_common.h  ll_counter.h
paper/: poly.aux  poly.bbl  poly.ltx
paper/bib/: modeling.bib
paper/dot/: poly_ed101.dot  poly_ed101.tex  poly_ed6bd41.dot  poly_hkth1d101.dot  poly_hkth1d101.tex  test.dot  test1.dot  test1tikz.tex  testtikz.tex
paper/plot/: .pLTHSSB.swp  joined_sort_SB  pLTHSSB  platency  test
paper/plotnew/: .pLTHSSB.swp  H_LT  SB_LT  pHSSB  pLTHSSB
poly/: CMakeLists.txt  bruteforce.h  coefficients.h  combinatory.h  combinatory.hpp  estrin.h  factorization.h  horner.h  main.cpp  poly.h  polynomial.cpp  polynomial.h  pow.h  printer.cpp  printer.h  printer.hpp
poly/method/: bruteforce.hpp  coefficients.hpp  estrin.hpp  horner.hpp  pow.hpp
poly/method/coefficients/: P10.hpp  P2.hpp  P4.hpp  P6.hpp  P8.hpp  coefficients.hpp
res_exp/: .lt_scalar.swp  .lt_vector.swp  data_bw  data_p7  data_p8  data_sb  latex.pl  lt_scalar  lt_vector  out_exp_bw  out_exp_sb  plot.pl  pp.pl  r.sh
res_exp/figures/: allht_scalar_exp.eps  allht_vector_exp.eps
res_exp/old/: data_hw
res_poly/: data_bw  data_hw  data_p7  data_p8  data_sb  haswell  histo.pl  latex.pl  lt_scalar  lt_vector  out_poly_hw  out_poly_sb  p7  p8  plot  plot.pl  r.sh  sb  stat.pl  toto.pl
res_poly/figures/: all_precision_scalar.eps  all_precision_vector.eps  allht.eps  allht_scalar.eps  test.eps  (+8 more)
test/: CMakeLists.txt  test_scalar.cpp  test_vector.cpp
test/exp/: CMakeLists.txt  test_vector.cpp
test/poly/: .CMakeLists.txt.swp  .test_vector.cpp.swp  CMakeLists.txt  bd10.cpp  bd2bd2bd2bd2bd2.cpp  bd2bd2bd2bd2ed2.cpp  bd2bd2bd2bd2hkth1d2.cpp  bd2bd2bd2ed2ed2.cpp  bd2bd2bd2ed2hkth1d2.cpp  bd2bd2ed2ed2ed2.cpp  bd2bd2ed2ed2hkth1d2.cpp  bd2bd4bd4.cpp  bd2bd4ed4.cpp  bd2bd4hkth1d4.cpp  bd2bd4hkth2d4.cpp  bd2bd4hkth3d4.cpp  bd2ed2ed2ed2ed2.cpp  bd2ed2ed2ed2hkth1d2.cpp  bd2ed4ed4.cpp  bd2ed4hkth1d4.cpp  bd2ed4hkth2d4.cpp  bd2ed4hkth3d4.cpp  bd2hkth1d4hkth1d4.cpp  bd2hkth1d4hkth2d4.cpp  bd2hkth1d4hkth3d4.cpp  bd2hkth2d4hkth2d4.cpp  bd2hkth2d4hkth3d4.cpp  bd2hkth3d4hkth3d4.cpp  bd4bd2bd2bd2.cpp  bd4bd2bd2ed2.cpp  bd4bd2bd2hkth1d2.cpp  bd4bd2ed2ed2.cpp  bd4bd2ed2hkth1d2.cpp  bd4ed2ed2ed2.cpp  bd4ed2ed2hkth1d2.cpp  bd6bd2bd2.cpp  bd6bd2ed2.cpp  bd6bd2hkth1d2.cpp  bd6bd4.cpp  bd6ed2ed2.cpp  (+383 more)
(+1107 files in other folders)
