cmake_minimum_required (VERSION 2.6)
project (poly)
list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake)

include(CheckCXXSourceCompiles)
include(CheckCXXCompilerFlag)
include(CheckCXXSourceRuns)

find_package(SIMD)
find_package(FMA)

include(SelectTech)
#include(Compiler)
set (CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "${CXX_DIALECT_OPT_CXX11} ${COMPILER_OPT_ARCH_NATIVE} ${CMAKE_CXX_FLAGS} ${CYME_FMA_FLAGS} ${CYME_SIMD_FLAGS}")

option (POLY_CYME "Build vectorization exp using cyme DSL" ON)
option (POLY_BENCH "Build benchmark" ON)
option (POLY_TEST "Build bench and test " ON)

if(POLY_TEST)
enable_testing()
endif()
#set(Boost_USE_STATIC_LIBS  ON)
find_package(Boost COMPONENTS unit_test_framework system )
#boost include
include_directories(${Boost_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR})
include_directories(${PROJECT_SOURCE_DIR}/cyme/include)

set(INTEL_LIB_PATH /nix/store/arxdbxsw23mpah255pkymkcgr43j2d25-generated-env-module-icc/lib/)

set(libexp bd10 bd2bd2bd2bd2bd2 bd2bd2bd2bd2ed2 bd2bd2bd2bd2hkth1d2 bd2bd2bd2ed2ed2 bd2bd2bd2ed2hkth1d2 bd2bd2bd2hkth1d2hkth1d2 bd2bd2ed2ed2ed2
bd2bd2ed2ed2hkth1d2 bd2bd2ed2hkth1d2hkth1d2 bd2bd2hkth1d2hkth1d2hkth1d2 bd2bd4bd4 bd2bd4ed4 bd2bd4hkth1d4 bd2bd4hkth2d4 bd2bd4hkth3d4 bd2ed2ed2ed2ed2
bd2ed2ed2ed2hkth1d2 bd2ed2ed2hkth1d2hkth1d2 bd2ed2hkth1d2hkth1d2hkth1d2 bd2ed4ed4 bd2ed4hkth1d4 bd2ed4hkth2d4 bd2ed4hkth3d4
bd2hkth1d2hkth1d2hkth1d2hkth1d2 bd2hkth1d4hkth1d4 bd2hkth1d4hkth2d4 bd2hkth1d4hkth3d4 bd2hkth2d4hkth2d4 bd2hkth2d4hkth3d4 bd2hkth3d4hkth3d4
bd4bd2bd2bd2 bd4bd2bd2ed2 bd4bd2bd2hkth1d2 bd4bd2ed2ed2 bd4bd2ed2hkth1d2 bd4bd2hkth1d2hkth1d2 bd4ed2ed2ed2 bd4ed2ed2hkth1d2 bd4ed2hkth1d2hkth1d2
bd4hkth1d2hkth1d2hkth1d2 bd6bd2bd2 bd6bd2ed2 bd6bd2hkth1d2 bd6bd4 bd6ed2ed2 bd6ed2hkth1d2 bd6ed4 bd6hkth1d2hkth1d2 bd6hkth1d4 bd6hkth2d4
bd6hkth3d4 bd8bd2 bd8ed2 bd8hkth1d2 ed10 ed2bd4bd4 ed2bd4ed4 ed2bd4hkth1d4 ed2bd4hkth2d4 ed2bd4hkth3d4 ed2ed2ed2ed2ed2 ed2ed2ed2ed2hkth1d2
ed2ed2ed2hkth1d2hkth1d2 ed2ed2hkth1d2hkth1d2hkth1d2 ed2ed4ed4 ed2ed4hkth1d4 ed2ed4hkth2d4 ed2ed4hkth3d4 ed2hkth1d2hkth1d2hkth1d2hkth1d2
ed2hkth1d4hkth1d4 ed2hkth1d4hkth2d4 ed2hkth1d4hkth3d4 ed2hkth2d4hkth2d4 ed2hkth2d4hkth3d4 ed2hkth3d4hkth3d4 ed4bd2bd2bd2 ed4bd2bd2ed2
ed4bd2bd2hkth1d2 ed4bd2ed2ed2 ed4bd2ed2hkth1d2 ed4bd2hkth1d2hkth1d2 ed4ed2ed2ed2 ed4ed2ed2hkth1d2 ed4ed2hkth1d2hkth1d2 ed4hkth1d2hkth1d2hkth1d2
ed6bd2bd2 ed6bd2ed2 ed6bd2hkth1d2 ed6bd4 ed6ed2ed2 ed6ed2hkth1d2 ed6ed4 ed6hkth1d2hkth1d2 ed6hkth1d4 ed6hkth2d4 ed6hkth3d4 ed8bd2 ed8ed2 ed8hkth1d2
hkth1d10 hkth1d2bd4bd4 hkth1d2bd4ed4 hkth1d2bd4hkth1d4 hkth1d2bd4hkth2d4 hkth1d2bd4hkth3d4 hkth1d2ed4ed4 hkth1d2ed4hkth1d4 hkth1d2ed4hkth2d4
hkth1d2ed4hkth3d4 hkth1d2hkth1d2hkth1d2hkth1d2hkth1d2 hkth1d2hkth1d4hkth1d4 hkth1d2hkth1d4hkth2d4 hkth1d2hkth1d4hkth3d4 hkth1d2hkth2d4hkth2d4 hkth1d2hkth2d4hkth3d4
hkth1d2hkth3d4hkth3d4 hkth1d4bd2bd2bd2 hkth1d4bd2bd2ed2 hkth1d4bd2bd2hkth1d2 hkth1d4bd2ed2ed2 hkth1d4bd2ed2hkth1d2 hkth1d4bd2hkth1d2hkth1d2 hkth1d4ed2ed2ed2
hkth1d4ed2ed2hkth1d2 hkth1d4ed2hkth1d2hkth1d2 hkth1d4hkth1d2hkth1d2hkth1d2 hkth1d6bd2bd2 hkth1d6bd2ed2 hkth1d6bd2hkth1d2 hkth1d6bd4 hkth1d6ed2ed2
hkth1d6ed2hkth1d2 hkth1d6ed4 hkth1d6hkth1d2hkth1d2 hkth1d6hkth1d4 hkth1d6hkth2d4 hkth1d6hkth3d4 hkth1d8bd2 hkth1d8ed2 hkth1d8hkth1d2 hkth2d10 hkth2d4bd2bd2bd2
hkth2d4bd2bd2ed2 hkth2d4bd2bd2hkth1d2 hkth2d4bd2ed2ed2 hkth2d4bd2ed2hkth1d2 hkth2d4bd2hkth1d2hkth1d2 hkth2d4ed2ed2ed2 hkth2d4ed2ed2hkth1d2 hkth2d4ed2hkth1d2hkth1d2
hkth2d4hkth1d2hkth1d2hkth1d2 hkth2d6bd2bd2 hkth2d6bd2ed2 hkth2d6bd2hkth1d2 hkth2d6bd4 hkth2d6ed2ed2 hkth2d6ed2hkth1d2 hkth2d6ed4 hkth2d6hkth1d2hkth1d2 hkth2d6hkth1d4
hkth2d6hkth2d4 hkth2d6hkth3d4 hkth2d8bd2 hkth2d8ed2 hkth2d8hkth1d2 hkth3d10 hkth3d4bd2bd2bd2 hkth3d4bd2bd2ed2 hkth3d4bd2bd2hkth1d2 hkth3d4bd2ed2ed2 hkth3d4bd2ed2hkth1d2
hkth3d4bd2hkth1d2hkth1d2 hkth3d4ed2ed2ed2 hkth3d4ed2ed2hkth1d2 hkth3d4ed2hkth1d2hkth1d2 hkth3d4hkth1d2hkth1d2hkth1d2 hkth3d6bd2bd2 hkth3d6bd2ed2 hkth3d6bd2hkth1d2
hkth3d6bd4 hkth3d6ed2ed2 hkth3d6ed2hkth1d2 hkth3d6ed4 hkth3d6hkth1d2hkth1d2 hkth3d6hkth1d4 hkth3d6hkth2d4 hkth3d6hkth3d4 hkth3d8bd2 hkth3d8ed2 hkth3d8hkth1d2
hkth4d10 hkth4d6bd2bd2 hkth4d6bd2ed2 hkth4d6bd2hkth1d2 hkth4d6bd4 hkth4d6ed2ed2 hkth4d6ed2hkth1d2 hkth4d6ed4 hkth4d6hkth1d2hkth1d2 hkth4d6hkth1d4 hkth4d6hkth2d4
hkth4d6hkth3d4 hkth4d8bd2 hkth4d8ed2 hkth4d8hkth1d2 hkth5d10 hkth5d6bd2bd2 hkth5d6bd2ed2 hkth5d6bd2hkth1d2 hkth5d6bd4 hkth5d6ed2ed2 hkth5d6ed2hkth1d2 hkth5d6ed4
hkth5d6hkth1d2hkth1d2 hkth5d6hkth1d4 hkth5d6hkth2d4 hkth5d6hkth3d4 hkth5d8bd2 hkth5d8ed2 hkth5d8hkth1d2 hkth6d10 hkth6d8bd2 hkth6d8ed2 hkth6d8hkth1d2 hkth7d10
hkth7d8bd2 hkth7d8ed2 hkth7d8hkth1d2 hkth8d10 hkth9d10)

add_subdirectory (poly)
add_subdirectory (llc)
add_subdirectory (bench)
add_subdirectory (test)
